# graphio

./: meson.build  proto_gen.sh
.cache/clangd/index/: g-cursor.c.B8C114312BB0D966.idx  g-cursor.h.70F5DDBBD16383BE.idx  g-dock-app.c.20A17BCD76FCAFE2.idx  g-dock-app.h.621508C6F6ECD3BD.idx  g-dock-panel.c.F9E99F1E52D59F71.idx  g-dock-panel.h.BE1998143C6A598C.idx  g-dock.h.F1DC920D72E808DA.idx  g-event-manager.c.C6274F3FD71318EB.idx  g-event-manager.h.4040F884AC1870CF.idx  g-icon.c.C77A709B8394A17F.idx  g-icon.h.1AB2CF5D4DF2BD05.idx  g-keyboard.c.E311410F06682A55.idx  g-keyboard.h.49F1DE387BAEE429.idx  g-output.c.E766126B9235EF13.idx  g-output.h.20C5A49F0B1C3342.idx  g-popup.c.AFF037F33A591AF6.idx  g-popup.h.F2751F39E688404F.idx  g-seat.c.B6AEBB05BE0BE857.idx  g-seat.h.8AAA7AEDBB4B2E5A.idx  g-server.c.BC1B226FAE7C90A3.idx  g-server.h.94835C5D545B7D31.idx  g-toplevel-interaction.c.1E198288D067936A.idx  g-toplevel-interaction.h.95F514B0B12E0BE7.idx  g-toplevel-intersection.c.B51EAC24662EA5C7.idx  g-toplevel-intersection.h.09F5E31EB52008E3.idx  g-toplevel.c.1C50F742F6AFA7C6.idx  g-toplevel.h.DA71691E5E55F41E.idx  g_config.c.892067153D966824.idx  g_config.h.364B3EB692D25534.idx  g_cursor.c.FAB48DDFCDDBC0D7.idx  g_cursor.h.639385981879E118.idx  g_image.c.750CCBCA15E145AC.idx  g_image.h.525326A8E8AF518B.idx  g_image_utils.c.2ECA9004C4185005.idx  g_image_utils.h.68251C3EDFE62CB0.idx  g_keyboard.c.4FCD59D3D44FD5DD.idx  g_keyboard.h.1E831B98567A2BAD.idx  g_launcher.c.3D000638B7AF98EE.idx  g_launcher.h.784EE8AFA770F3A8.idx  g_layer_surface.c.BC5DD2DCF34931A7.idx  (+39 more)
client/scoring/: .gitignore  graph_model.py  main.py  model.py  scoring.py
client/switcher/: meson.build
client/switcher/.cache/clangd/index/: main.c.69B9C642104A0B22.idx  sw_switcher.c.72666DA75B424394.idx  sw_switcher.h.89AF6ADE4EB566D9.idx  sw_switcher_widget.c.1661B7500073B17A.idx  sw_switcher_widget.h.D29D8C0EE4B4A2FD.idx  sw_toplevel.c.071F317671E0A7B8.idx  sw_toplevel.h.2D3A75ED7415D12E.idx  sw_toplevel_widget.c.942779CBE7367EDD.idx  sw_toplevel_widget.h.D4C41D584360B112.idx
client/switcher/include/: sw_graph_model.h  sw_scorer.h  sw_switcher.h  sw_toplevel.h
client/switcher/include/app/: sw_application.h
client/switcher/include/graph/: sw_graph_model.h  sw_graph_node.h
client/switcher/include/input/: sw_input_handler.h
client/switcher/include/math/: sw_color.h  sw_vec2.h
client/switcher/include/storage/: sw_app_storage.h
client/switcher/include/ui/: sw_border_item.h  sw_flow_layout.h  sw_polar_layout.h  sw_primitives.h  sw_switcher_widget.h  sw_toplevel_widget.h
client/switcher/include/ui/animation/: sw_animation.h  sw_animation_manager.h  sw_easing.h
client/switcher/include/util/: sw_time_util.h
client/switcher/include/wayland/: sw_wayland_backend.h
client/switcher/res/: styles.css
client/switcher/src/: gtk_main.c  main.c  sw_graph_model.c  sw_scorer.c  sw_switcher.c  sw_toplevel.c
client/switcher/src/app/: sw_application.c
client/switcher/src/graph/: sw_graph_model.c  sw_graph_node.c
client/switcher/src/input/: sw_input_handler.c
client/switcher/src/math/: sw_vec2.c
client/switcher/src/storage/: sw_app_storage.c
client/switcher/src/ui/: sw_border_item.c  sw_flow_layout.c  sw_polar_layout.c  sw_primitives.c  sw_switcher_widget.c  sw_toplevel_widget.c
client/switcher/src/ui/animation/: sw_animation.c  sw_animation_manager.c
client/switcher/src/wayland/: sw_wayland_backend.c
client/wallpaper/: meson.build
client/wallpaper/.cache/clangd/index/: gtk_main.c.DD84F60BB40E1B05.idx  main.c.585F937B1747B824.idx  main.c.69B9C642104A0B22.idx  switcher_main.c.503A578C4CFC5DCF.idx
client/wallpaper/src/: main.c
contract/protobuf/: scoring_events.proto  window_events.proto
include/: g-cursor.h  g-dock-app.h  g-dock-panel.h  g-dock.h  g-icon.h  g-keyboard.h  g-output.h  g-popup.h  g-seat.h  g-server.h  g-toplevel-interaction.h  g-toplevel.h  g_launcher.h  g_layer_surface.h  g_navgraph.h  g_navigator.h  g_server.h  g_toplevel.h  g_toplevel_handle.h  g_workspace.h  g_workspace_window.h  utils.h
include/components/: g_vector.h  paddings.h
include/cursor/: g_cursor.h
include/events/: g-event-manager.h
include/keyboard/: g_keyboard.h
include/output/: g_output.h
include/popup/: g_popup.h
include/seat/: g_seat.h
include/toplevel/: g_toplevel.h
include/ui/window_switcher/: g_switcher.h
include/utils/: g-toplevel-intersection.h  g_image.h  g_image_utils.h
src/: g-cursor.c  g-dock-app.c  g-dock-panel.c  g-dock.c  g-icon.c  g-keyboard.c  g-output.c  g-popup.c  g-seat.c  g-server.c  g-toplevel-interaction.c  g-toplevel.c  g_launcher.c  g_layer_surface.c  g_navgraph.c  g_navigator.c  g_renderer.c  g_toplevel.c  g_toplevel_handle.c  g_workspace.c  g_workspace_window.c  main.c
src/components/: paddings.c
src/cursor/: g_cursor.c
src/events/: g-event-manager.c
src/keyboard/: g_keyboard.c
src/output/: g_output.c
src/popup/: g_popup.c
src/seat/: g_seat.c
src/toplevel/: g_toplevel.c  g_toplevel_handle.c
src/ui/window_switcher/: g_switcher.c
src/utils/: g-toplevel-intersection.c  g_image.c  g_image_utils.c
